Balanceo de stats, cambios visuales varios y cambiados algunos textos

--- a/RPGTexto.html
+++ b/RPGTexto.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" async></script>
-    <title>RPG Texto</title>
+    <title>TextoRPG</title>
 </head>
 <body>
     <div id="game-container">
         <div id="enemy-area">
-            <h2>Enemigos</h2>
+            <h2>TextoRPG</h2>
             <div id="enemy-stats"></div>
         </div>
         <div id="battle-log"></div>
